--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,16 @@
-img {
+#all-restaurants img, #all-monuments img, #all-museums img, #all-sports img, #all-concerts img {
     border-radius: 25px;
     padding: 10px;
     margin: 20px;
     height: 200px;
     width: 200px;
+    justify-content: center;
+  }
+
+  p {
+    display: inline-block;
+    margin: auto;
+    padding: 10px;
+    text-align: center;
+
   }
